--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test?allowPublicKeyRetrieval=true
-spring.datasource.username=user
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/numdev?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=rootUser
+spring.datasource.password=rootPwd
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
